--- a/resources/view/main_scene_view.fxml
+++ b/resources/view/main_scene_view.fxml
@@ -88,6 +88,7 @@
     <MenuBar AnchorPane.leftAnchor="0" AnchorPane.rightAnchor="0">
         <Menu mnemonicParsing="false" text="File">
             <MenuItem mnemonicParsing="false" onAction="#openImage" text="Open" />
+            <MenuItem mnemonicParsing="false" onAction="#openImageSequence" text="Open Image Sequence" />
             <MenuItem mnemonicParsing="false" onAction="#saveModifiedImage" text="Save" />
             <MenuItem mnemonicParsing="false" onAction="#close" text="Close" />
         </Menu>
