--- a/resources/view/active_contour_scene_view.fxml
+++ b/resources/view/active_contour_scene_view.fxml
@@ -9,13 +9,29 @@
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ToggleButton?>
 <AnchorPane prefHeight="449.0" prefWidth="526.0" xmlns="http://javafx.com/javafx/9" xmlns:fx="http://javafx.com/fxml/1"
 			fx:controller="presentation.controller.ActiveContourSceneController">
 	<BorderPane prefHeight="447.0" prefWidth="526.0">
 		<right>
 			<VBox alignment="CENTER" prefHeight="200.0" prefWidth="153.0" BorderPane.alignment="CENTER">
-				<Label fx:id="steps_label" text="Insert steps"/>
-				<TextField fx:id="steps" prefHeight="27.0" prefWidth="50.0" promptText="Steps"/>
+				<Label fx:id="steps_label" text="Insert steps" />
+				<TextField fx:id="steps" prefHeight="27.0" prefWidth="50.0" promptText="Steps">
+					<VBox.margin>
+						<Insets bottom="10.0" right="10.0" top="10.0" />
+					</VBox.margin>
+				</TextField>
+				<Label fx:id="epsilon_label" text="Insert epsilon"/>
+				<TextField fx:id="epsilon" prefHeight="27.0" prefWidth="50.0" promptText="Epsilon" text="0" disable="true">
+					<VBox.margin>
+						<Insets bottom="10.0" right="10.0" top="10.0" />
+					</VBox.margin>
+				</TextField>
+				<ToggleButton onAction="#onUseEpsilon" mnemonicParsing="false" text="Use Epsilon">
+					<VBox.margin>
+						<Insets bottom="10.0" right="10.0" top="10.0" />
+					</VBox.margin>
+				</ToggleButton>
 				<Button fx:id="getBackgroundButton" alignment="CENTER" mnemonicParsing="false" onAction="#onGetBackground" text="Get background">
 					<VBox.margin>
 						<Insets bottom="10.0" right="10.0" top="10.0"/>
