sift base view implemented

--- a/resources/view/main_scene_view.fxml
+++ b/resources/view/main_scene_view.fxml
@@ -197,7 +197,8 @@
          </Menu>
       <Menu mnemonicParsing="false" text="Characteristic Points">
         <items>
-          <MenuItem mnemonicParsing="false" onAction="#onApplyHarris" text="Corners (Harris)" />
+            <MenuItem mnemonicParsing="false" onAction="#onApplyHarris" text="Corners (Harris)" />
+            <MenuItem mnemonicParsing="false" onAction="#onApplySift" text="Sift" />
         </items>
       </Menu>
     </MenuBar>
