--- a/resources/view/bilateral_filter_scene_view.fxml
+++ b/resources/view/bilateral_filter_scene_view.fxml
@@ -6,7 +6,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 
 
-<AnchorPane prefHeight="214.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.BilateralFilterSceneController">
+<AnchorPane prefHeight="214.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="presentation.controller.BilateralFilterSceneController">
    <children>
       <Label layoutX="104.0" layoutY="58.0" text="Closeness Function Sigma" />
       <Label layoutX="324.0" layoutY="58.0" text="Similarity Function Sigma" />
