--- a/resources/view/bilateral_filter_scene_view.fxml
+++ b/resources/view/bilateral_filter_scene_view.fxml
@@ -6,12 +6,14 @@
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane prefHeight="214.0" prefWidth="756.0" xmlns="http://javafx.com/javafx/9" xmlns:fx="http://javafx.com/fxml/1" fx:controller="presentation.controller.BilateralFilterSceneController">
+<AnchorPane prefHeight="214.0" prefWidth="925.0" xmlns="http://javafx.com/javafx/9" xmlns:fx="http://javafx.com/fxml/1" fx:controller="presentation.controller.BilateralFilterSceneController">
 	<Label layoutX="104.0" layoutY="58.0" text="Closeness Function Sigma" />
 	<Label layoutX="323.0" layoutY="58.0" text="Similarity Function Sigma" />
-	<Label layoutX="542.0" layoutY="58.0" text="Image system type" />
+	<Label layoutX="542.0" layoutY="58.0" text="Mask size (only odd values)" />
+	<Label layoutX="761.0" layoutY="58.0" text="Image system type" />
 	<TextField fx:id="closenessSigmaTextField" layoutX="99.0" layoutY="85.0" />
 	<TextField fx:id="similaritySigmaTextField" layoutX="317.0" layoutY="85.0" />
+	<TextField fx:id="maskSize" layoutX="525.0" layoutY="85.0" />
 	<Button layoutX="358.0" layoutY="151.0" mnemonicParsing="false" onAction="#onApply" text="Apply" />
-   <ChoiceBox fx:id="imageSystemType" layoutX="525.0" layoutY="85.0" prefWidth="150.0" />
+   <ChoiceBox fx:id="imageSystemType" layoutX="743.0" layoutY="85.0" prefWidth="150.0" />
 </AnchorPane>
