--- a/resources/view/bilateral_filter_scene_view.fxml
+++ b/resources/view/bilateral_filter_scene_view.fxml
@@ -6,7 +6,7 @@
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane prefHeight="214.0" prefWidth="925.0" xmlns="http://javafx.com/javafx/9" xmlns:fx="http://javafx.com/fxml/1" fx:controller="presentation.controller.BilateralFilterSceneController">
+<AnchorPane prefHeight="214.0" prefWidth="925.0" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="presentation.controller.BilateralFilterSceneController">
 	<Label layoutX="104.0" layoutY="58.0" text="Closeness Function Sigma" />
 	<Label layoutX="323.0" layoutY="58.0" text="Similarity Function Sigma" />
 	<Label layoutX="542.0" layoutY="58.0" text="Mask size (only odd values)" />
@@ -16,4 +16,6 @@
 	<TextField fx:id="maskSize" layoutX="525.0" layoutY="85.0" />
 	<Button layoutX="358.0" layoutY="151.0" mnemonicParsing="false" onAction="#onApply" text="Apply" />
    <ChoiceBox fx:id="imageSystemType" layoutX="743.0" layoutY="85.0" prefWidth="150.0" />
+	<Label layoutX="542.0" layoutY="115.0" text="Recommended value" />
+   <Button layoutX="580.0" layoutY="135.0" mnemonicParsing="false" onAction="#onCalculateRecommendedMaskValue" text="Calculate" />
 </AnchorPane>
